--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ test {
 }
 
 dependencies {
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
     testImplementation 'org.hamcrest:hamcrest:2.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
 }
